Misc/core_core_c.h




CVAPI(CvSparseMat*)  cvCreateSparseMat( int dims, const int* sizes, int type );



CVAPI(CvSparseMat*) cvCloneSparseMat( const CvSparseMat* mat );



CVAPI(CvSparseNode*) cvInitSparseMatIterator( const CvSparseMat* mat,
                                              CvSparseMatIterator* mat_iterator );