Misc/wrapper_parsed/core_core_c.h.hpp



  void *CvNodeVal_wrap(CvSparseNode *node, CvSparseMat *mat);

  int *CvNodeIdx_wrap(CvSparseNode *node, CvSparseMat *mat);